k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scm-delivery-deployment
  labels:
    app: scm-delivery
spec:
  replicas: 2 # 파드 2개로 다중화 배포
  selector:
    matchLabels:
      app: scm-delivery
  template:
    metadata:
      labels:
        app: scm-delivery
    spec:
      containers:
        - name: scm-delivery-app
          image: jihoon00/scm-delivery:latest # 👈 본인의 도커 이미지 주소로 변경
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
