k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-delivery-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: scm-delivery
  ports:
    - port: 8080
      targetPort: 8080
