k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scm-delivery-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:967996001868:certificate/676d8ebd-d524-4f7a-a4d5-2f8fcb765d8f"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    external-dns.alpha.kubernetes.io/hostname: dlvapi.project2-hc-scm.cloud
spec:
  rules:
    - host: dlvapi.project2-hc-scm.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scm-delivery-service
                port:
                  number: 8080
